--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,17 @@
 {
-    "name": "flexpress/accordian",
+    "name": "flexpress/accordion",
     "description": "FlexPress based plugin",
     "type": "project",
     "license": "MIT",
     "require": {
         "pimple/pimple": "2.0.*",
-        "flexpress/component-plugin": "1.0.*"
+        "flexpress/component-plugin": "1.0.*",
+        "flexpress/component-acf": "1.0.*",
+        "flexpress/component-shortcode": "1.0.*"
     },
     "autoload": {
         "psr-4": {
-            "FlexPress\\Plugins\\Accordian\\": "src/FlexPress/Plugins/Accordian"
+            "FlexPress\\Plugins\\Accordion\\": "src/FlexPress/Plugins/Accordion"
         }
     }
 }
