updating composer package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "flexpress/accordion",
+    "name": "flexpress/plugin-accordion",
     "description": "FlexPress based plugin",
     "type": "project",
     "license": "MIT",
